# flovopy

./: .gitignore  README.md  TEST_INFRABSU_CENTAUR.xml  conf.py  dem_explorer.ipynb  detect_rsam.py  environment.yml  flovopy_asl.yml  flovopy_enhanced.yml  flovopy_plus.yml  index.rst  pyproject.toml  setup.py  show_indexdb.py  tremor_detector.py
flovopy/: __init__.py  b10_create_seiscomp_extended_schema.py  config_projects.py  passcal.py  utils.py
obsolete/: asl.py  detect_rsam.py  metrics.py  preprocessing.py  tremor_detector.py
output/: trace_metrics.csv
projects/: a00_create_mvoe_index_db.py  a01_index_wav_files.py  a02_index_aef_files.py  a03_index_sfiles.py  a04_miniseed2cleanedVEL.py  a05_parse_mseed_log.py  a08_median_locations_by_subclass.py  a09_show_magnitudes.py  a10_add_file_type_column.py  a11_index_continuous_wav_files.py  a12_compare_time_lags.py  a12_fill_gaps_with_event_data.py  a13_fill_gaps_with_event_data.py  a14_merge_continuous.py  a15_preprocess_daily_sds.py  aXX_run_pipeline.sh  b10_create_extseiscompdb.py  b11_cleaned2wfdisc.py  b12_qmljson2extseiscompdb.py  b17_backfill_event_metrics_to_db.py  b18_lib.py  b18_waveform_processing.py  b19_summarize_asl_results.py  b20_summarize_all_b18_events.py  b21_summarize_b18_faster.py  b22_parse_old_ampmap_db.py  b22_read_ampmapdb.py  b26_try_sausage_plot.py  bXX_run_pipeline.sh  c20_read_old_energymag.py  c21_move_yyyymmdd_folders.py  c22_sausageplot.py  c24_station_corrections.py  c25_magnitude_error.py  check_db.py  db_backup.py  obsolete_maybe.py  projects_config.py  run_a10_to_a15.sh  (+9 more)
(+324 files in other folders)
