[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flovopy"
version = "0.1.0"
description = "Seismology and volcano observatory tools including Seisan parsing"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.8"
dependencies = [
  "obspy",
  "pandas",
  "numpy"
]

[project.scripts]
run-iceweb = "flovopy.wrappers.run_iceweb:main"
run-asl = "flovopy.wrappers.run_asl:main"
run-sds2rsam = "flovopy.wrappers.run_sds2rsam:main"
run-sds2disp = "flovopy.wrappers.run_sds2disp:main"
run-fdsn2sds = "flovopy.wrappers.run_fdsn2sds:main"
run-seisan2sds = "flovopy.wrappers.run_seisan2sds:main"
